# TerminalMusicPlayer

./: .gitignore  Areas_of_improvement.md  Cargo.toml  LICENSE  PKGBUILD  README.md  dist-workspace.toml  index.html  install.sh
.github/workflows/: release.yml
src/: PKGBUILD  app.rs  audio.rs  config.rs  lib.rs  main.rs  meta.rs  output.rs  player.rs  shell.rs  term.rs  volume.rs
src/app/: mod.rs
src/audio/: mod.rs  output.rs  volume.rs
src/config/: mod.rs
src/player/: mod.rs
src/term/: mod.rs  shell.rs
src/ui/: input.rs  mod.rs  render.rs
src/util/: mod.rs
