[package]
name = "terminal-music-player"
version = "0.1.0"
edition = "2021"

# We want a short, easy-to-type executable name.
autobins = false

description = "A beautiful, keyboard-driven terminal music player for Linux."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rodio = { version = "0.20", features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
fastrand = "2.0"
walkdir = "2.5"
unicode-width = "0.2"

# System mixer volume control (native backends).
# On Linux we use ALSA mixer; on Windows/macOS we use the platform audio APIs.
alsa = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
	"Win32_System_Com",
	"Win32_Media_Audio",
] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "tmp"
path = "src/main.rs"
