[package]
name = "trix-player"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Riza Mohammad <rizamohammad.work@gmail.com>"]

# We want a short, easy-to-type executable name.
autobins = false

description = "A beautiful, keyboard-driven terminal music player for Linux."
repository = "https://github.com/RIZAmohammadkhan/TerminalMusicPlayer"
homepage = "https://github.com/RIZAmohammadkhan/TerminalMusicPlayer"
readme = "README.md"
keywords = ["music", "player", "tui", "terminal", "audio"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
rodio = { version = "0.20", features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
fastrand = "2.0"
walkdir = "2.5"
unicode-width = "0.2"
signal-hook = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
# NOTE: cargo-deb uses this to populate Debian control metadata.
# If you want a stricter Maintainer format, use: "Your Name <you@example.com>".
maintainer = "Riza Mohammad <rizamohammad.work@gmail.com>"
section = "sound"
priority = "optional"
# ALSA is used at runtime on Linux; keep $auto so cargo-deb can also infer other deps.
depends = "$auto, libasound2"

[package.metadata.generate-rpm]
# NOTE: RPM packaging needs a license string. Update this to match your project.
license = "MIT"
assets = [
	{ source = "target/release/trix", dest = "/usr/bin/trix", mode = "755" },
	{ source = "README.md", dest = "/usr/share/doc/trix-player/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
alsa-lib = "*"

[[bin]]
name = "trix"
path = "src/main.rs"
